<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".point">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/reset"
        android:onClick="reset"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:orientation="vertical"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/teamName1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="25dp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/point1"
                android:textSize="65dp"
                android:text="0"
                android:gravity="center"
                android:layout_marginTop="20dp">
            </TextView>

            <Button
                android:id="@+id/btnADD3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnADD3"
                android:text="@string/p3"
                android:layout_marginTop="20dp">

            </Button>

            <Button
                android:id="@+id/btnADD2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnADD2"
                android:text="@string/p2"
                android:layout_marginTop="20dp">
            </Button>

            <Button
                android:id="@+id/btnADD1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnADD1"
                android:text="@string/p1"
                android:layout_marginTop="20dp">
            </Button>


        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent">
        </TextView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_alignParentLeft="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/teamName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/title2"
                android:textSize="25dp">
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/point2"
                android:textSize="65dp"
                android:text="0"
                android:layout_marginTop="20dp"
                android:gravity="center" >
            </TextView>

            <Button
                android:id="@+id/btn2ADD3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnADD3"
                android:text="@string/p3"
                android:layout_marginTop="20dp">
            </Button>

            <Button
                android:id="@+id/btn2ADD2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnADD2"
                android:text="@string/p2"
                android:layout_marginTop="20dp">
            </Button>

            <Button
                android:id="@+id/btn2ADD1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="btnADD1"
                android:text="@string/p1"
                android:layout_marginTop="20dp">
            </Button>


        </LinearLayout>
    </LinearLayout>



</RelativeLayout>
